--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                     <p class="big-tex">Football Club</p>
                     <p>Football, also known as soccer, is a sport that has been around for centuries. It originated in England in the 19th century and has since spread to become the world's most popular sport. It is played by two teams of eleven players each, and the objective is to score goals by kicking the ball into the other team's goal. The team with the most goals at the end of the game wins.</p>
                     <p>GITAM International student has Two football Teams(men and women) Both teams are well known in level of Andhra Pradesh state specifically in Vizag, and they won many trophy </p>
-                    <a class="btn btn-first" href="#">Visit Page</a>
+                    <a class="btn btn-first" href="https://www.instagram.com/gitam_isa/">Visit Page</a>
                     <a class="btn btn-second" href="https://youtube.com/@gisatv3644">Subscribe Us</a>
                 </div>
                 <div class="col-sm-6">
-                    <a href="https://youtube.com/@gisatv3644"><img src="/videos/vi.jpeg" class="img-responsive" alt="VIGIS UNITED"></a>
+                    <a href="https://youtube.com/@gisatv3644"><img src="vi.jpeg" class="img-responsive" alt="VIGIS UNITED"></a>
                 </div>
             </div>
         </div>
